padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


0.9.11  2019-10-31  A Halloween'19 Release.

- When using autotools and ./configure --with-qt=...,
  it is also necessary to adjust the PKG_CONFIG_PATH
  environment variable (after a merge request by plcl
  aka. Pedro López-Cabanillas, while on qmidinet,
  thanks).

- Upstream packaging is now split to JACK standalone and
  LV2 plugin only: the former shared common core and UI 
  package is now duplicated but statically linked though.


0.9.10  2019-09-24  An Early-Fall'19 Release.

- Upstream packaging is now split on JACK standalone,
  LV2 plugin and common core and UI packages, similar
  to recent Debian practice.
- Added alternate yet non-official CMake build option.
- Fix HiDPI display screen effective support (Qt >= 5.6).
- All randomizers now compliant to the standard normal
  distribution.
- Make sure compiler flags comply to c++11 as standard.


0.9.9  2019-07-18  A Summer'19 Release.

- Randomization of current parameters and partials is
  now available through a new top-level push-button and
  the context-menu respectively.
- Updated for the newer Qt5 development tools (>= 5.13).
- Per instance custom tuning (micro-tonal) option has
  been added to the previously existing global settings
  (cf. Help > Configure... > Tuning > Global, Instance).
- New DCF and LFO Enabled parameters.
- Configure updated to check for qtchooser availability.


0.9.8  2019-06-06  A Spring'19 Release.

- Improved slew-rate to DCF Formant coefficient updates.
- Refactored the LFO Sync for correctness.
- Fixed all LFO Panning and Volume modulation, now being
  correctly isolated on a per voice basis.
- Fixed initial DCO and LFO wave shapes on LV2 plug-in UI.
- Minor update to Debian packaging control file.


0.9.7  2019-04-14  A Spring-Break'19 Release.

- All audio input now get through without being processed
  by any or whole effects stage anymore.