@@ -56,6 +56,7 @@
 #include <stdlib.h>
 #include <math.h>
 
+#include <QApplication>
 #include <QDomDocument>
 
 
@@ -661,10 +662,22 @@ bool padthv1_lv2::patch_put ( uint32_t ndelta, uint32_t type )
 // padthv1_lv2 - LV2 desc.
 //
 
+static QApplication *padthv1_lv2_qapp_instance = nullptr;
+static unsigned int  padthv1_lv2_qapp_refcount = 0;
+
 static LV2_Handle padthv1_lv2_instantiate (
 	const LV2_Descriptor *, double sample_rate, const char *,
 	const LV2_Feature *const *host_features )
 {
+	if (qApp == nullptr && padthv1_lv2_qapp_instance == nullptr) {
+		static int s_argc = 1;
+		static const char *s_argv[] = { __func__, nullptr };
+		padthv1_lv2_qapp_instance = new QApplication(s_argc, (char **) s_argv);
+	}
+
+	if (padthv1_lv2_qapp_instance)
+		padthv1_lv2_qapp_refcount++;
+
 	return new padthv1_lv2(sample_rate, host_features);
 }
 
@@ -707,6 +720,11 @@ static void padthv1_lv2_cleanup ( LV2_Handle instance )
 	padthv1_lv2 *pPlugin = static_cast<padthv1_lv2 *> (instance);
 	if (pPlugin)
 		delete pPlugin;
+
+	if (padthv1_lv2_qapp_instance && --padthv1_lv2_qapp_refcount == 0) {
+		delete padthv1_lv2_qapp_instance;
+		padthv1_lv2_qapp_instance = nullptr;
+	}
 }
 
 
